# polymarket-indexer

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile  tmp.md
spec/: 0001_topic0-schema-parquet.md  0002_storage-backends.md  0003_kafka-integration-test.md  0004_backfill-cli.md  0005_backfill-http-rpc.md  0006_refactor-shared-ingestion-lib.md  0007_backfill-header-auth.md  0008_frontfill-header-auth.md  0009_coverage-to-85-plan.md  0010_frontfill-prometheus-metrics.md  0011_review-remediation-plan.md  CODE_REVIEW_20260216.md  README.md  REVIEW_RESPONSE_20260221.md  instructions.md
src/: backfill.rs  contracts.rs  decode.rs  frontfill.rs  lib.rs  main.rs  metrics.rs  storage.rs
tests/: backfill_cli.rs  cli.rs  kafka.rs  metrics_runtime.rs
