[package]
name = "polymarket-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "0.5.0", features = ["full", "node-bindings", "rpc-types-eth", "providers", "transports", "contract", "json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parquet = "53.3.0"
arrow = "53.3.0"
chrono = "0.4"
futures = "0.3"
anyhow = "1"
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
async-trait = "0.1"
rdkafka = { version = "0.37", features = ["tokio"], optional = true }
apache-avro = { version = "0.17", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[features]
default = []
kafka = ["rdkafka", "apache-avro"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["kafka"] }
uuid = { version = "1", features = ["v4"] }
